Bug 761299 - Cleanup DeleteRangeTxn::CreateTxnsToDeleteBetween; r=ehsan